--- a/main.html
+++ b/main.html
@@ -22,14 +22,16 @@
 	    position: absolute;
 	    top: 5%;
 	    left: 50%;
-	    transform: translate(-50%, -40%);
+	    transform: translate(-50%, -30%);
 		text-align: center;
 	    color: white;
 
 </style>
 <body>
 	<!-- the entire body must be written by student -->
-	<h1 id="centered-text">Welcome to the new Era of Artificial intelligence</h1>
+	<center id="centered-text">
+		<h1>Welcome to the new Era of Artificial intelligence</h1>
+	</center>
     <script type="text/javascript" src="./script.js">
 </script>
 
